<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SFSU Systems</string>
    <string name="login">Login</string>
    <string name="username_hint">Username</string>
    <string name="forgot_pass">Forgot your Password?</string>
    <string name="password_hint">Password</string>
    <string name="logo">logo</string>
    <string name="email_hint">Enter your email</string>
    <string name="scan_device">Scan for a device</string>
    <string name="view_inventory">View inventory</string>
    <string name="profile">Profile</string>
    <string name="devices">DEVICES</string>
    <string name="locations">LOCATIONS</string>
    <string name="owners">OWNERS</string>
    <string name="add">Add</string>
    <string name="new_location_hint">Enter location</string>
    <string name="search">Search</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="action_done">DONE</string>
    <string name="device_hint">Enter Device Name</string>
    <string name="map_device">Map Device</string>
    <string name="device_name_label">NAME</string>
    <string name="ip_address">IP</string>
    <string name="os">OS</string>
    <string name="model">MODEL</string>
    <string name="year">YEAR</string>
    <string name="barcode_hint">Enter bacode or scan</string>
    <string name="ip_hint">Enter IP address</string>
    <string name="model_hint">Enter Model</string>
    <string name="os_hint">Enter Operating System</string>
    <string name="year_hint">Enter Year</string>

</resources>